add openapi definitions for tags
